# term-indexing

./: CHANGES.md  LICENSE.md  Makefile  README.md  dune-project  index.html  lib_rewriting.opam  term-indexing.opam
bench/: bench.ml  dune  zbench.ml
example/: constant_folding.ml  dune
lib/: TODO.md  dune  index.ml  index.mld  index2.ml  int_option.ml  int_option.mli  intf.ml  path.ml  path.mli  pattern.ml  pvec.ml  rewrite.ml  signature.ml  slow_index.ml  subst.ml  substitution_tree.ml  term.ml  term.mli  term_index.ml  term_indexing.ml  uf.ml  unification.ml  zipper.ml
monolith/: dune  puf.ml  pvector.ml
patches/: view_in_zipper.diff
term-indexing/: index.html
term-indexing/Term_indexing/: index.html
term-indexing/Term_indexing/Int_option/: index.html
term-indexing/Term_indexing/Intf/: index.html
term-indexing/Term_indexing/Intf/module-type-Hashed/: index.html
term-indexing/Term_indexing/Intf/module-type-Map/: index.html
term-indexing/Term_indexing/Intf/module-type-Pattern/: index.html
term-indexing/Term_indexing/Intf/module-type-Signature/: index.html
term-indexing/Term_indexing/Make/: index.html
term-indexing/Term_indexing/Path/: index.html
term-indexing/Term_indexing/Pattern/: index.html
term-indexing/Term_indexing/Subst/: index.html
term-indexing/Term_indexing/Term/: index.html
term-indexing/Term_indexing/Term_index/: index.html
test/: arith.ml  dune  index_test.ml  int_option_test.ml  misc.ml  naive_index.ml  path_test.ml  rewriting_test.ml  subst_test.ml  term_test.ml  zipper_test.ml
(+38 files in other folders)
